# cquel

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac  cqstatic.c  cqstatic.h  cquel.c  cquel.h  cquel.pc
doc/: api.md  build.md  structures.md
m4/: NOTES
